--- a/pages/service.html
+++ b/pages/service.html
@@ -315,7 +315,9 @@
         </div>
 
         <!-- Right Content Section -->
-        <div class="w-full h-auto lg:w-1/2 flex flex-col justify-center space-y-6">
+        <div
+          class="w-full h-auto lg:w-1/2 flex flex-col justify-center space-y-6"
+        >
           <h1 class="text-3xl font-bold text-gray-800">
             Secured Business Loans
           </h1>
@@ -373,11 +375,11 @@
               </p>
             </li>
             <a
-            href="/pages/contact.html"
-            class="inline-block text-white font-semibold py-3 px-8 rounded-md shadow-md bg-gradient-to-r from-[#093] to-[#097] hover:from-[#097] hover:to-[#093] transition duration-300 ease-in-out transform hover:scale-105"
-          >
-            Apply for a Loan
-          </a>
+              href="/pages/contact.html"
+              class="inline-block text-white font-semibold py-3 px-8 rounded-md shadow-md bg-gradient-to-r from-[#093] to-[#097] hover:from-[#097] hover:to-[#093] transition duration-300 ease-in-out transform hover:scale-105"
+            >
+              Apply for a Loan
+            </a>
           </ul>
         </div>
       </div>
@@ -410,7 +412,6 @@
             maintaining flexibility and control.
           </p>
 
-          
           <ul class="space-y-4">
             <h1 class="text-lg font-semibold text-gray-800">
               How do our Unsecured Business Loans empower your business?
@@ -456,11 +457,11 @@
               </p>
             </li>
             <a
-            href="/pages/contact.html"
-            class="inline-block text-white font-semibold py-3 px-8 rounded-md shadow-md bg-gradient-to-r from-[#093] to-[#097] hover:from-[#097] hover:to-[#093] transition duration-300 ease-in-out transform hover:scale-105"
-          >
-            Apply for a Loan
-          </a>
+              href="/pages/contact.html"
+              class="inline-block text-white font-semibold py-3 px-8 rounded-md shadow-md bg-gradient-to-r from-[#093] to-[#097] hover:from-[#097] hover:to-[#093] transition duration-300 ease-in-out transform hover:scale-105"
+            >
+              Apply for a Loan
+            </a>
           </ul>
         </div>
       </div>
@@ -496,9 +497,9 @@
             <h3 class="text-3xl text-left font-semibold text-gray-900 mb-8">
               Documents Required
             </h3>
-            <div class="border border-2 bg-white rounded-lg py-2 px-2">
+            <div class="border w-full border-2 bg-white rounded-lg py-2 px-2">
               <h1
-                class="bg-green-600 w-1/2 text-white text-center py-3 px-4 rounded-md"
+                class="bg-green-600 w-[20vw] mx-auto text-white text-center py-3 px-4 rounded-md"
               >
                 For Business / Self Employed
               </h1>
