--- a/pages/contact.html
+++ b/pages/contact.html
@@ -293,14 +293,14 @@
       <div
         class="grid lg:grid-cols-2 items-center gap-10 sm:p-8 p-4 font-[sans-serif]"
       >
-        <div class="lg:w-[40vw]">
+        <div class="lg:w-full pl-10">
           <h1 class="text-4xl font-bold text-black">Get in Touch</h1>
           <p class="text-sm text-black mt-4 leading-relaxed">
             You can call us or leave a request and we’ll reply as soon as
             possible. We will be glad to see you in our office too.
           </p>
 
-          <ul class="mt-12 space-y-8">
+          <ul class="mt-8 space-y-4">
             <li class="flex items-center">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -315,7 +315,7 @@
                 />
               </svg>
               <a href="javascript:void(0)" class="text-black text-sm ml-4">
-                prajit@kreditventure.com
+                info@kreditventure.com
               </a>
             </li>
             <li class="flex items-center">
@@ -348,7 +348,7 @@
                     class="text-black text-sm lg:ml-4 ml-7 rounded-md shadow-md border-2 border p-2"
                   >
                     <span class="underline">Mumbai</span> <br />
-                    10th Floor,Awfis, R-City-2 Offices, Adjoining R-City Mall,
+                    10th Floor, Awfis, R-City-2 Offices, Adjoining R-City Mall,
                     Lal Bahadur Shastri Marg, Ghatkopar (West), Mumbai,
                     Maharashtra - 400086
                   </a>
@@ -362,87 +362,35 @@
                 <h4>Branch Locations:</h4>
               </div>
               <div class="flex flex-col text-start justify-center lg:mx-3">
-                <div class="flex lg:w-[38vw] flex-col lg:flex-row flex-col">
+                <div class="flex lg:w-full flex-col lg:flex-row flex-col">
                   <a
                     href="javascript:void(0)"
                     class="text-black text-sm lg:ml-4 ml-7 rounded-md shadow-md border-2 border p-2"
                   >
                     <span class="underline">Panvel</span> <br />Office No: 120,
-                    1st Floor,Prabhakar Raje Complex, In Front Of Chhatrapati
-                    Shivaji Maharaj Chowk, M.T.N.L Road, Panvel - 410206
+                    1st Floor, Prabhakar Raje Complex, In Front Of Chhatrapati
+                    Shivaji Maharaj Chowk, M.T.N.L Road, Panvel, Maharashtra -
+                    410206
                   </a>
                   <a
                     href="javascript:void(0)"
                     class="text-black text-sm lg:ml-4 ml-7 rounded-md shadow-md border-2 border p-2"
                   >
                     <span class="underline">Baramati</span> <br />Shree Plaza
-                    Building, Ground Floor ,Shop No-1, Near Sudhit Hotel,
-                    Ambikanagar, Jalochi, Baramati - 413102
+                    Building, Ground Floor, Shop No-1, Near Sudhit Hotel,
+                    Ambikanagar, Jalochi, Baramati,&nbsp;&nbsp; Maharashtra -
+                    413102
                   </a>
                   <a
                     href="javascript:void(0)"
                     class="text-black lg:ml-4 text-sm ml-7 rounded-md shadow-md border-2 border p-2"
                   >
-                    <span class="underline">Aurangabad</span> <br />525, 5 th
-                    floor, D-wing ,Freedom Tower ,Jawhar colony road, Akashwani,
-                    Chhatrapati Sambhajinagar- 431001
+                    <span class="underline">Aurangabad</span> <br />525, 5th
+                    Floor, D-Wing, Freedom Tower, Jawahar Colony Road,
+                    Akashwani, Chhatrapati Sambhajinagar, Maharashtra - 431001
                   </a>
                 </div>
               </div>
-            </li>
-          </ul>
-
-          <ul class="flex mt-12 space-x-4">
-            <li
-              class="bg-[#014260] hover:bg-[#014260e2] h-10 w-10 rounded-full flex items-center justify-center shrink-0"
-            >
-              <a href="https://www.instagram.com/kreditventure/">
-                <img
-                  src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png"
-                  alt="Instagram"
-                  class="w-6 h-6"
-                />
-              </a>
-            </li>
-            <li
-              class="bg-[#014260] hover:bg-[#014260e2] h-10 w-10 rounded-full flex items-center justify-center shrink-0"
-            >
-              <a href="https://www.facebook.com/kreditventure"
-                ><img
-                  src="https://img.icons8.com/ios-filled/50/ffffff/facebook-new.png"
-                  alt="Facebook"
-                  class="w-6 h-6"
-              /></a>
-            </li>
-            <li
-              class="bg-[#014260] hover:bg-[#014260e2] h-10 w-10 rounded-full flex items-center justify-center shrink-0"
-            >
-              <a href="https://x.com/KreditVenture"
-                ><img
-                  src="https://img.icons8.com/?size=100&id=fJp7hepMryiw&format=png&color=ffffff"
-                  alt="X"
-                  class="w-6 h-6"
-              /></a>
-            </li>
-            <li
-              class="bg-[#014260] hover:bg-[#014260e2] h-10 w-10 rounded-full flex items-center justify-center shrink-0"
-            >
-              <a href="https://www.youtube.com/channel/UCzdw1BEG7c_IbGBkUsJnnHg"
-                ><img
-                  src="https://img.icons8.com/ios-filled/50/ffffff/youtube-play.png"
-                  alt="YouTube"
-                  class="w-6 h-6"
-              /></a>
-            </li>
-            <li
-              class="bg-[#014260] hover:bg-[#014260e2] h-10 w-10 rounded-full flex items-center justify-center shrink-0"
-            >
-              <a href="https://www.linkedin.com/company/kreditventure"
-                ><img
-                  src="https://img.icons8.com/ios-filled/50/ffffff/linkedin.png"
-                  alt="LinkedIn"
-                  class="w-6 h-6"
-              /></a>
             </li>
           </ul>
         </div>
@@ -554,48 +502,52 @@
       ></iframe>
     </div>
     <!-- map end -->
-    <!-- Subscribe start -->
+
+    <!-- subs start -->
     <div
-      class="container flex flex-col xl:flex-row mx-auto px-5 py-12 text-gray-500"
+      class="max-w-6xl flex flex-col items-center lg:flex-row mx-auto px-5 py-12 text-gray-500"
     >
-      <div class="w-full mb-6 xl:mb-0 sm:text-center">
-        <div class="mb-4 text-gray-900 text-3xl font-extrabold">
+      <!-- Text Section -->
+      <div class="w-full xl:w-1/2 text-center xl:text-left">
+        <div class=" mb-4 text-gray-900 text-3xl font-extrabold">
           Join 2,000+ subscribers
         </div>
-
-        <div class="text-lg">
+        <div class="text-sm">
           Stay in the loop with everything you need to know.
         </div>
       </div>
 
-      <div class="w-full">
-        <div class="flex flex-col justify-center sm:flex-row gap-3 w-full">
+      <!-- Subscription Form -->
+      <div class="w-full flex-col items-center lg:w-1/2">
+        <div
+          class="flex flex-col lg:flex-row justify-center items-center gap-3 w-full"
+        >
           <input
             type="text"
             placeholder="Enter your email"
-            class="sm:w-2/4 h-12 p-3 text-gray-900 border border-solid border-gray-300 rounded-lg shadow"
+            class="w-full sm:w-2/4 mb-4 h-12 px-2 text-gray-900 border border-solid border-gray-300 rounded-lg shadow"
           />
-
           <button
             type="submit"
-            class="sm:w-1/4 h-12 text-white bg-[#014260] rounded-lg shadow"
+            class="w-full mb-4 sm:w-1/4 h-12 text-white bg-[#014260] rounded-lg shadow sm:max-w-[200px]"
           >
             Subscribe
           </button>
         </div>
-
-        <div class="mt-3 text-sm sm:text-center">
+        <div class="text-sm text-start pl-16">
           We care about your data in our
           <button
             data-modal-target="default-modal"
             data-modal-toggle="default-modal"
             class="cursor-pointer transition-all text-[#014260] font-bold duration-300 ease-in-out hover:text-gray-700"
           >
-            Privacy Policy</button
-          >.
+            Privacy Policy
+          </button>
+          .
         </div>
       </div>
     </div>
+
     <!-- Subscribe end -->
 
     <!-- contact us end -->
